- cleaning up initial commit - made changes to gruntfile - removed fastclick and updated other bower dependencies - removed all junk and leftover files - removed extra stuff from sass - changed spaced to tabs in HTML5BP files - removed typekit reference from header

--- a/.editorconfig
+++ b/.editorconfig
@@ -40,7 +40,7 @@ indent_size = 2
 indent_style = space
 indent_size = 2
 
-# spaces instead of tabs for json files
+# Spaces instead of tabs for JSON files
 
 [*.json]
 indent_style = space
